--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Honyomi web page.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Honyomi - {{ page.title }}</title>
+    <title>PictRuby - {{ page.title }}</title>
 
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.3/material.red-blue.min.css">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.3/material.pink-blue.min.css">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.3/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/css/style.css">
@@ -29,16 +29,16 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
-          <span class="mdl-layout-title">Honyomi</span>
+          <span class="mdl-layout-title">PictRuby</span>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <!-- <a class="mdl-navigation__link" href="./">HOME</a> -->
           </nav>
           <div class="mdl-layout-spacer"></div>
-          <span><a href="/">[English]</a> <a href="/ja/">[Japanese]</a></span>
+          <!-- <span><a href="/">[English]</a> <a href="/ja/">[Japanese]</a></span> -->
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Honyomi</span>
+        <span class="mdl-layout-title">PictRuby</span>
         <nav class="mdl-navigation">
           <!-- <a class="mdl-navigation__link" href="./">HOME</a> -->
         </nav>
@@ -56,8 +56,8 @@
         <footer class="mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://honyomi.nagoya" data-count="horizontal" data-text="Honyomi - Pdf search engine written by Ruby">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
-              <!-- <li><a href="http://b.hatena.ne.jp/entry/http://honyomi.nagoya" class="hatena-bookmark-button" data-hatena-bookmark-title="Honyomi - Pdf search engine written by Ruby" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script></li> -->
+              <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://pictruby.ongaeshi.me" data-count="horizontal" data-text="PictRuby - Photo editor that can write a filter in Ruby">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
+              <!-- <li><a href="http://b.hatena.ne.jp/entry/http://pictruby.ongaeshi.me" class="hatena-bookmark-button" data-hatena-bookmark-title="PictRuby - Photo editor that can write a filter in Ruby" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script></li> -->
               <li>Copyright (c) 2014, 2015 ongaeshi - <a href="http://ongaeshi.me/"><img src="http://www.gravatar.com/avatar/6377451175704e2d367ce508bffc1fa5" alt="web" width="24"/></a></li>
             </ul>
           </div>
