Add language links to footer

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -50,8 +50,10 @@
         <footer class="mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://pictruby.ongaeshi.me" data-count="horizontal" data-text="RubyPico - Photo editor that can write a filter in Ruby">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
-              <!-- <li><a href="http://b.hatena.ne.jp/entry/http://pictruby.ongaeshi.me" class="hatena-bookmark-button" data-hatena-bookmark-title="RubyPico - Photo editor that can write a filter in Ruby" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script></li> -->
+              <li><a href="/en">English</a></li>
+              <li><a href="/ja">日本語</a></li>
+            </ul>
+            <ul class="mdl-mini-footer--link-list">
               <li>Copyright (c) 2014, 2015 ongaeshi - <a href="http://ongaeshi.me/"><img src="http://www.gravatar.com/avatar/6377451175704e2d367ce508bffc1fa5" alt="web" width="24"/></a></li>
             </ul>
           </div>
