Generate footerlinks auto

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -50,11 +50,10 @@
         <footer class="mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="/en">English</a></li>
-              <li><a href="/ja">日本語</a></li>
+              {% include footerlinks.html %}
             </ul>
             <ul class="mdl-mini-footer--link-list">
-              <li>Copyright (c) 2014, 2015 ongaeshi - <a href="http://ongaeshi.me/"><img src="http://www.gravatar.com/avatar/6377451175704e2d367ce508bffc1fa5" alt="web" width="24"/></a></li>
+              <li>Copyright (c) 2016 ongaeshi - <a href="http://ongaeshi.me/"><img src="http://www.gravatar.com/avatar/6377451175704e2d367ce508bffc1fa5" alt="web" width="24"/></a></li>
             </ul>
           </div>
         </footer>
