--- a/_includes/sitelinks.html
+++ b/_includes/sitelinks.html
@@ -4,5 +4,5 @@
   {% assign sitelinks = site.locales.sitelinks['en'] %}
 {% endif %}
 {% for link in sitelinks %}
-  <a class="mdl-navigation__link" href="{{ link.url }}/">{{ link.text }}</a>
+  <a class="mdl-navigation__link" href="{{ link.url }}">{{ link.text }}</a>
 {% endfor %}
