--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Honyomi web page.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RubyPico - {{ page.title }}</title>
+    <title>{{ page.title }}</title>
 
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.3/material.pink-blue.min.css">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.3/material.min.js"></script>
